--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "leaderboard-1",
   "version": "1.0.0",
   "description": "![Microverse](https://img.shields.io/badge/Microverse-blueviolet)",
+  "private": "true",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,6 +18,11 @@
   },
   "homepage": "https://github.com/alexander16108/LeaderBoard#readme",
   "devDependencies": {
+    "hint": "^6.1.4",
+    "stylelint": "^13.13.1",
+    "stylelint-config-standard": "^21.0.0",
+    "stylelint-csstree-validator": "^1.9.0",
+    "stylelint-scss": "^3.20.1",
     "webpack": "^5.48.0",
     "webpack-cli": "^4.7.2"
   },
