--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "stylelint-scss": "^3.20.1",
     "webpack": "^5.48.0",
     "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^3.11.2",
+    "webpack-manifest-plugin": "^4.0.2"
   },
   "dependencies": {
     "@babel/core": "^7.14.8",
