--- a/package.json
+++ b/package.json
@@ -1,13 +1,28 @@
 {
   "name": "leaderboard-1",
   "version": "1.0.0",
-  "description": "In this activity you will set up a JavaScript project for the Leaderboard list app, using webpack and ES6 features, notably modules. You should develop a first working version of the app following a wireframe, but without styling - just focus on functionality. In following activities, you will consume the Leaderboard API using JavaScript async and await and add some styling.",
-  "main": "index.js",
+  "description": "![Microverse](https://img.shields.io/badge/Microverse-blueviolet)",
+  "private": true,
+  "devDependencies": {
+    "css-loader": "^6.2.0",
+    "express": "^4.17.1",
+    "html-webpack-plugin": "^5.3.2",
+    "style-loader": "^3.2.1",
+    "stylelint": "^13.13.1",
+    "stylelint-config-standard": "^21.0.0",
+    "stylelint-csstree-validator": "^1.9.0",
+    "stylelint-scss": "^3.20.1",
+    "webpack": "^5.48.0",
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-middleware": "^5.0.0",
+    "webpack-dev-server": "^3.11.2"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
     "watch": "webpack --watch",
-    "start": "webpack serve --open"
+    "start": "webpack serve --open",
+    "server": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -19,28 +34,5 @@
   "bugs": {
     "url": "https://github.com/alexander16108/LeaderBoard/issues"
   },
-  "homepage": "https://github.com/alexander16108/LeaderBoard#readme",
-  "devDependencies": {
-    "babel-eslint": "^10.1.0",
-    "css-loader": "^6.2.0",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.23.4",
-    "hint": "^6.1.4",
-    "html-webpack-plugin": "^5.3.2",
-    "style-loader": "^3.2.1",
-    "stylelint": "^13.13.1",
-    "stylelint-config-standard": "^21.0.0",
-    "stylelint-csstree-validator": "^1.9.0",
-    "stylelint-scss": "^3.20.1",
-    "webpack": "^5.48.0",
-    "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^3.11.2",
-    "webpack-manifest-plugin": "^4.0.2"
-  },
-  "dependencies": {
-    "@babel/core": "^7.14.8",
-    "@babel/preset-env": "^7.14.9",
-    "babel-loader": "^8.2.2"
-  }
+  "homepage": "https://github.com/alexander16108/LeaderBoard#readme"
 }
