Adding APIs to project

--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
   "bugs": {
     "url": "https://github.com/alexander16108/LeaderBoard/issues"
   },
-  "homepage": "https://github.com/alexander16108/LeaderBoard#readme"
+  "homepage": "https://github.com/alexander16108/LeaderBoard#readme",
+  "dependencies": {
+    "axios": "^0.21.1"
+  }
 }
