--- a/package.json
+++ b/package.json
@@ -14,15 +14,13 @@
     "stylelint-scss": "^3.20.1",
     "webpack": "^5.48.0",
     "webpack-cli": "^4.7.2",
-    "webpack-dev-middleware": "^5.0.0",
     "webpack-dev-server": "^3.11.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
     "watch": "webpack --watch",
-    "start": "webpack serve --open",
-    "server": "node server.js"
+    "start": "webpack serve --open"
   },
   "repository": {
     "type": "git",
